sql/rpl_gtid_persist.cc
@@ -365,10 +365,7 @@ end:
     uint32 count = (uint32)m_atomic_count++;
     if (count == gtid_executed_compression_period ||
         DBUG_EVALUATE_IF("compress_gtid_table", 1, 0)) {
-      mysql_mutex_lock(&LOCK_compress_gtid_table);
-      should_compress = true;
-      mysql_cond_signal(&COND_compress_gtid_table);
-      mysql_mutex_unlock(&LOCK_compress_gtid_table);
+      set_compression_and_signal_compressor();
     }
   }
 
@@ -405,10 +402,7 @@ end:
   /* Notify compression thread to compress gtid_executed table. */
   if (error == 0 && compress &&
       DBUG_EVALUATE_IF("dont_compress_gtid_table", 0, 1)) {
-    mysql_mutex_lock(&LOCK_compress_gtid_table);
-    should_compress = true;
-    mysql_cond_signal(&COND_compress_gtid_table);
-    mysql_mutex_unlock(&LOCK_compress_gtid_table);
+    set_compression_and_signal_compressor();
   }
 
   return ret;
@@ -588,13 +582,20 @@ int Gtid_table_persistor::compress_first_consecutive_range(TABLE *table,
 
   if (err != HA_ERR_END_OF_FILE && err != 0)
     ret = -1;
-  else if (find_first_consecutive_gtids)
+  else if (find_first_consecutive_gtids) {
+    DBUG_EXECUTE_IF("print_gtid_compression_info", {
+      sql_print_information(
+          "Compression done by %s thread, first gapless row = %d-%d",
+          current_thd->thread_id() ? "compressor" : "persister", gno_start,
+          gno_end);
+    };);
+
     /*
       Update the gno_end of the first consecutive gtid with the gno_end of
       the last consecutive gtid for the first consecutive range of gtids.
     */
     ret = update_row(table, sid.c_str(), gno_start, gno_end);
-
+  }
   return ret;
 }
 
@@ -856,4 +857,11 @@ void terminate_compress_gtid_table_thread() {
   if (error != 0)
     LogErr(WARNING_LEVEL, ER_FAILED_TO_JOIN_GTID_TABLE_COMPRESSION_THREAD,
            error);
+}
+
+void Gtid_table_persistor::set_compression_and_signal_compressor() {
+  mysql_mutex_lock(&LOCK_compress_gtid_table);
+  should_compress = true;
+  mysql_cond_signal(&COND_compress_gtid_table);
+  mysql_mutex_unlock(&LOCK_compress_gtid_table);
 }
